# morss

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  hatch_build.py  main.py  pyproject.toml  setup.py
.github/workflows/: default.yml
src/morss/: __init__.py  __main__.py  caching.py  cli.py  crawler.py  feeds.py  logging.py  morss.py  readabilite.py  util.py  wsgi.py
src/www/: index.html
tests/: conftest.py  test_crawler.py  test_feeds.py
tests/samples/: 301-redirect-abs.txt  301-redirect-rel.txt  301-redirect-url.txt  header-refresh.txt  size-1MiB.txt
