[project]
name = "morss"
version = "0.0.1"
description = "Get full-text RSS feeds"
authors = [
    {name = "pictuga", email = "contact@pictuga.com"}
]
maintainers = [
    {name = "xNinjaKittyx", email = "xNinjaKittyx@users.noreply.github.com"}
]
license = "AGPL-3.0-only"
license-files = ["LICEN[CS]E.*"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "lxml>=5.3.1",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
full = [
    "diskcache>=5.6.3",
    "gunicorn>=23.0.0",
    "redis>=5.2.1",
    "setproctitle>=1.3.5",
]
dev = [
    "pyenchant>=3.2.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "http://morss.it/"
Repository = "https://git.pictuga.com/pictuga/morss"
"Bug Tracker" = "https://github.com/pictuga/morss/issues"

[project.scripts]
betavantage = "betavantage.main:main"
fetchdata = "betavantage.fetch_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Same as Black.
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "UP", "RUF"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
